devops/k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: devsecops-demo_fe
  name: frontend
  namespace: devsecops-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devsecops-demo_fe
  template:
    metadata:
      labels:
        app: devsecops-demo_fe
    spec:
      imagePullSecrets:
        - name: ghcr-login-secret      
      containers:
      - name: frontend
        image: ghcr.io/giacomodevopsdgs/demo_frontend:1.0.0
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: devsecops-demo  
spec:
  selector:
    app: devsecops-demo_fe
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
