devops/k8s/full_stack.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: devsecops-demo_fs
  name: fullstack
  namespace: devsecops-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devsecops-demo_fs
  template:
    metadata:
      annotations:
        conjur.org/container-mode: sidecar
        conjur.org/secrets-refresh-enabled: "true"
        conjur.org/secrets-refresh-interval: "10s"  # Quoted to ensure it's treated as a string
      labels:
        app: devsecops-demo_fs
    spec:
      serviceAccountName: devsecops-demo
      imagePullSecrets:
        - name: ghcr-login-secret      
      containers:
      - name: frontend
        image: ghcr.io/giacomodevopsdgs/demo_frontend:2e8df
      - name: backend
        image: ghcr.io/giacomodevopsdgs/demo_backend:1.0.2
        imagePullPolicy: Always
      - name: cyberark-secrets-provider-for-k8s
        image: cyberark/secrets-provider-for-k8s
        imagePullPolicy: Always
        volumeMounts:
          - mountPath: /run/conjur
            name: conjur-access-token
          - mountPath: /etc/conjur/ssl
            name: conjur-certs
          - mountPath: /conjur/podinfo
            name: podinfo
      volumes:
        - name: conjur-access-token
          emptyDir:
            medium: Memory
        - name: conjur-certs
          emptyDir:
            medium: Memory
        - name: podinfo
          downwardAPI:
            defaultMode: 420
            items:
              - path: annotations
                fieldRef:
                  apiVersion: v1
                  fieldPath: metadata.annotations
---
apiVersion: v1
kind: Service
metadata:
  name: fullstack
spec:
  selector:
    app: devsecops-demo_fs
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      name: fe
    - protocol: TCP
      port: 4000
      targetPort: 4000
      name: be      
  type: ClusterIP
